<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question" />

    <CheckBox
        android:id="@+id/cbStarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starter" />

    <CheckBox
        android:id="@+id/cbMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="eventOrder"
        android:text="@string/order" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/response" />

</LinearLayout>